--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -115,11 +115,11 @@
     <Compile Include="Services\OneDrive\OneDriveThumbnailSet.cs" />
     <Compile Include="Services\OneDrive\OneDriveUploadConstants.cs" />
     <Compile Include="Services\OneDrive\UserInfoSettings.cs" />
+    <Compile Include="Services\Twitter\TwitterStreamDeletedEvent.cs" />
     <Compile Include="Services\Twitter\TwitterStreamEventType.cs" />
     <Compile Include="Services\Twitter\TwitterStreamEvent.cs" />
     <Compile Include="Services\Twitter\TwitterDirectMessage.cs" />
-    <Compile Include="Services\Twitter\ITwitterStreamObject.cs" />
-    <Compile Include="Services\Twitter\TwitterUserStream.cs" />
+    <Compile Include="Services\Twitter\ITwitterResult.cs" />
     <Compile Include="Services\Twitter\TwitterUserStreamParser.cs" />
     <Compile Include="Services\Twitter\TwitterEntities.cs" />
     <Compile Include="Services\Twitter\TwitterErrors.cs" />
