--- a/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
@@ -51,6 +51,7 @@
     <Compile Include="AnimationSetCompletedEventArgs.cs" />
     <Compile Include="AnimationSetState.cs" />
     <Compile Include="AnimationTask.cs" />
+    <Compile Include="Behaviors\BehaviorBase.cs" />
     <Compile Include="Behaviors\Blur.cs" />
     <Compile Include="Behaviors\CompositionBehaviorBase.cs" />
     <Compile Include="Behaviors\FadeHeaderBehavior.cs" />
