--- a/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
+++ b/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
@@ -75,9 +75,9 @@
     <Compile Include="Extensions\HyperlinkExtensions.cs" />
     <Compile Include="Converters\StringVisibilityConverter.cs" />
     <Compile Include="Converters\StringFormatConverter.cs" />
-    <Compile Include="Extensions\ApplicationViewExtensions.cs" />
-    <Compile Include="Extensions\TitleBarExtensions.cs" />
-    <Compile Include="Extensions\StatusBarExtensions.cs" />
+    <Compile Include="Extensions\ApplicationView.cs" />
+    <Compile Include="Extensions\TitleBar.cs" />
+    <Compile Include="Extensions\StatusBar.cs" />
     <Compile Include="Extensions\VisualTreeExtensions.cs" />
     <Compile Include="Extensions\WebViewExtensions.cs" />
     <Compile Include="Helpers\BindableValueHolder.cs" />
