Added missing files that stopped this from compiling.

--- a/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
+++ b/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
@@ -11,8 +11,8 @@
     <AssemblyName>Microsoft.Toolkit.Uwp</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.10586.0</TargetPlatformMinVersion>
+    <TargetPlatformVersion>10.0.15052.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.15052.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -51,6 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\BluetoothLEHelper\BluetoothLEHelper.cs" />
+    <Compile Include="Helpers\BluetoothLEHelper\BytePadder.cs" />
+    <Compile Include="Helpers\BluetoothLEHelper\DispatcherService.cs" />
+    <Compile Include="Helpers\BluetoothLEHelper\GattProtocolErrorParser.cs" />
+    <Compile Include="Helpers\BluetoothLEHelper\GattUuidsService.cs" />
     <Compile Include="Helpers\BluetoothLEHelper\ObservableBluetoothLEDevice.cs" />
     <Compile Include="Helpers\BluetoothLEHelper\ObservableGattCharacteristics.cs" />
     <Compile Include="Helpers\BluetoothLEHelper\ObservableGattDeviceService.cs" />
