--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -55,6 +55,8 @@
     <Compile Include="BladeView\BladeView.Properties.cs" />
     <Compile Include="Carousel\Carousel.cs" />
     <Compile Include="Carousel\CarouselPanel.cs" />
+    <Compile Include="ClassicMenu\ClassicMenu.Logic.cs" />
+    <Compile Include="ClassicMenu\ClassicMenu.InputGestureText.cs" />
     <Compile Include="ClassicMenu\ClassicMenu.cs" />
     <Compile Include="ClassicMenu\ClassicMenuItem.cs" />
     <Compile Include="DropShadowPanel\DropShadowPanel.cs" />
