-Created RoundImageEx, using Ellipses and ImageBrushes to create a clipped Image.
-Moved shared ImageEx Logic to ImageEx base.

-RoundImageEx has Properties to add Stroke, StrokeThickness and the ability to disable Stroke on Placeholder Images.

-Added RoundImageEx to ImageEx Sample Page.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -72,6 +72,12 @@
     <Compile Include="HamburgerMenu\MenuItems\HamburgerMenuImageItem.cs" />
     <Compile Include="HeaderedTextBlock\HeaderedTextBlock.cs" />
     <Compile Include="HeaderedTextBlock\HeaderedTextBlock.Properties.cs" />
+    <Compile Include="ImageEx\ImageExBase.Placeholder.cs" />
+    <Compile Include="ImageEx\ImageExBase.Source.cs" />
+    <Compile Include="ImageEx\ImageExBase.cs" />
+    <Compile Include="ImageEx\ImageExBase.Members.cs" />
+    <Compile Include="ImageEx\RoundImageEx.cs" />
+    <Compile Include="ImageEx\RoundImageEx.Members.cs" />
     <Compile Include="MarkdownTextBlock\Display\ILinkRegister.cs" />
     <Compile Include="MarkdownTextBlock\Display\MarkdownTable.cs" />
     <Compile Include="MarkdownTextBlock\Display\XamlRenderer.cs" />
@@ -134,8 +140,6 @@
     <Compile Include="ControlHelpers.Math.cs" />
     <Compile Include="ImageEx\ImageEx.cs" />
     <Compile Include="ImageEx\ImageEx.Members.cs" />
-    <Compile Include="ImageEx\ImageEx.Placeholder.cs" />
-    <Compile Include="ImageEx\ImageEx.Source.cs" />
     <Compile Include="ScrollHeader\ScrollHeader.cs" />
     <Compile Include="ImageEx\ImageExFailedEventArgs.cs" />
     <Compile Include="ImageEx\ImageExOpenedEventArgs.cs" />
@@ -184,6 +188,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
     <Page Include="ImageEx\ImageEx.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Page>
+    <Page Include="ImageEx\RoundImageEx.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
