-Created Initial TextToolbar. -Created basic Sample Page.
-Current Issues:
  *Can’t seem to register Commands into the Shell for sample page.

  *Code formatting hasn’t been implemented properly yet, inlines don’t seem to be to spec for MarkDownTextBlock? Code blocks hasn’t been implemented either.

  *Setting a List from a selection that starts in the middle of a line confuses the SetList Function, and places the LineChar at the end of the first line.

  *Different Formatting types would likely want different Default Buttons, perhaps a way to Replace all Default Buttons in XAML without requiring a complete restyle?

  *RichTextFormatter is unimplemented.

  *If you remove a Default Button, you can’t add it back.

  *There is currently a dependency on the FontAwesome Font, as MDL2 has not NumberedList Icon.

  *Replacing the Default Labels for translation is a bit daunting, is there a better way?

  *Would it be helpful if the SetSelect and SetList functions were moved out of MarkDownFormatter for use in other formatters?

--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -367,6 +367,8 @@
     <Content Include="SamplePages\MarkdownTextBlock\MarkdownTextBlockCode.bind" />
     <Content Include="SamplePages\OneDrive Service\OneDriveCode.bind" />
     <Content Include="SamplePages\Analytics\AnalyticsCode.bind" />
+    <Content Include="SamplePages\TextToolbar\TextToolbar.bind" />
+    <Content Include="SamplePages\TextToolbar\TextToolbarCode.bind" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -439,6 +441,9 @@
     <Compile Include="SamplePages\OneDrive Service\OneDriveSampleHelpers.cs" />
     <Compile Include="SamplePages\Analytics\AnalyticsPage.xaml.cs">
       <DependentUpon>AnalyticsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SamplePages\TextToolbar\TextToolbarPage.xaml.cs">
+      <DependentUpon>TextToolbarPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="SamplePages\TileControl\TileControlPage.xaml.cs">
       <DependentUpon>TileControlPage.xaml</DependentUpon>
@@ -647,6 +652,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="SamplePages\Analytics\AnalyticsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="SamplePages\TextToolbar\TextToolbarPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
