--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -118,6 +118,7 @@
     <Compile Include="TextBoxRegex\TextBoxRegex.Data.cs" />
     <Compile Include="TextBoxRegex\TextBoxRegex.Properties.cs" />
     <Compile Include="TextBoxRegex\TextBoxRegex.cs" />
+    <Compile Include="TextToolbar\Formats\Format.cs" />
     <Compile Include="TextToolbar\Formats\Formatter.cs" />
     <Compile Include="TextToolbar\Formats\MarkDownFormatter.cs" />
     <Compile Include="TextToolbar\Formats\RichTextFormatter.cs" />
@@ -125,10 +126,13 @@
     <Compile Include="TextToolbar\TextToolbar.Events.cs" />
     <Compile Include="TextToolbar\TextToolbar.Labels.cs" />
     <Compile Include="TextToolbar\TextToolbar.Properties.cs" />
-    <Compile Include="TextToolbar\ToolbarItems\CustomToolbarButton.cs" />
-    <Compile Include="TextToolbar\ToolbarItems\CustomToolbarItem.cs" />
-    <Compile Include="TextToolbar\ToolbarItems\CustomToolbarSeparator.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\ButtonMap.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\CommonButtons.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\CommonButtons.Events.cs" />
     <Compile Include="TextToolbar\ToolbarItems\DefaultButton.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\IToolbarItem.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\ToolbarButton.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\ToolbarSeparator.cs" />
     <Compile Include="TileControl\TileControl.cs" />
     <Compile Include="WrapPanel\WrapPanel.cs" />
     <Compile Include="WrapPanel\WrapPanel.Data.cs" />
@@ -207,6 +211,14 @@
     <Page Include="TextToolbar\TextToolbar.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="TextToolbar\ToolbarItems\ToolbarSeparator.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="TextToolbar\ToolbarItems\ToolbarButton.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="TileControl\TileControl.xaml">
       <Generator>MSBuild:Compile</Generator>
